--- a/cycle3/form_validation.html
+++ b/cycle3/form_validation.html
@@ -56,7 +56,8 @@ padding:8px;
     </tr>
     <tr> 
     	<th>Last name</th>
-    	<td><span class="error" id="firstNameError"><input type="text">(max 30 characters)</span></td>
+    	<td><input type="text">(max 30 characters)
+    	</td>
     </tr>
     <tr> 
     	<th>D O B</th>
